# Watt

./: .gitignore  LICENSE  README.md  watt_DeformationGradient.hpp  watt_KroneckerProduct.hpp  watt_RotationVariantPolarSVD.hpp  watt_Spring.hpp  watt_StableNeoHookean.hpp
.github/workflows/: cmake-tests.yml
tests/: CMakeLists.txt
tests/DeformationGradient/: CMakeLists.txt  tst_DeformationGradient.cpp
tests/KroneckerProduct/: CMakeLists.txt  tst_KroneckerProduct.cpp
tests/Spring/: CMakeLists.txt  tst_Spring.cpp
tests/StableNeoHookean/: CMakeLists.txt  tst_StableNeoHookean.cpp
